# guerrillamail-client-c

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml
examples/: CMakeLists.txt  demo.c
include/: guerrillamail_client.h
src/: lib.rs
